--- a/CMPUT301W15T12/bin/AndroidManifest.xml
+++ b/CMPUT301W15T12/bin/AndroidManifest.xml
@@ -22,6 +22,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="ca.ualberta.cs.cmput301w15t12.ClaimListActivity"
+            android:label="@string/title_activity_claim_list" >
+        </activity>
+        <activity
+            android:name="ca.ualberta.cs.cmput301w15t12.ClaimActivity"
+            android:label="@string/title_activity_claim" >
+        </activity>
     </application>
 
 </manifest>
