--- a/CMPUT301W15T12/AndroidManifest.xml
+++ b/CMPUT301W15T12/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:name="ca.ualberta.cs.cmput301w15t12.ClaimActivity"
             android:label="@string/title_activity_claim" >
         </activity>
+        <activity
+            android:name="ca.ualberta.cs.cmput301w15t12.ApproverActivity"
+            android:label="@string/title_activity_approver" >
+        </activity>
     </application>
 
 </manifest>
