--- a/CMPUT301W15T12/AndroidManifest.xml
+++ b/CMPUT301W15T12/AndroidManifest.xml
@@ -34,6 +34,10 @@
             android:name="ca.ualberta.cs.cmput301w15t12.ApproverActivity"
             android:label="@string/title_activity_approver" >
         </activity>
+        <activity
+            android:name="ca.ualberta.cs.cmput301w15t12.ApproverItemActivity"
+            android:label="@string/title_activity_approver_item" >
+        </activity>
     </application>
 
 </manifest>
