--- a/CMPUT301W15T12Test/AndroidManifest.xml
+++ b/CMPUT301W15T12Test/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <uses-library android:name="android.test.runner" />
+        <activity android:name=".TagActivity"></activity>
     </application>
+    
+    
 
 </manifest>
