--- a/CMPUT301W15T12/AndroidManifest.xml
+++ b/CMPUT301W15T12/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="ca.ualberta.cs.cmput301w15t12.MainActivity"
+            android:name="ca.ualberta.cs.cmput301w15t12.Activities.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,19 +23,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="ca.ualberta.cs.cmput301w15t12.ClaimListActivity"
+            android:name="ca.ualberta.cs.cmput301w15t12.Activities.ClaimListActivity"
             android:label="@string/title_activity_claim_list" >
         </activity>
         <activity
-            android:name="ca.ualberta.cs.cmput301w15t12.ClaimActivity"
+            android:name="ca.ualberta.cs.cmput301w15t12.Activities.ClaimActivity"
             android:label="@string/title_activity_claim" >
         </activity>
         <activity
-            android:name="ca.ualberta.cs.cmput301w15t12.ApproverActivity"
+            android:name="ca.ualberta.cs.cmput301w15t12.Activities.ApproverActivity"
             android:label="@string/title_activity_approver" >
         </activity>
         <activity
-            android:name="ca.ualberta.cs.cmput301w15t12.ApproverItemActivity"
+            android:name="ca.ualberta.cs.cmput301w15t12.Activities.ApproverItemActivity"
             android:label="@string/title_activity_approver_item" >
         </activity>
     </application>
