--- a/CMPUT301W15T12/AndroidManifest.xml
+++ b/CMPUT301W15T12/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="ca.ualberta.cs.cmput301w15t12.Activities.MainActivity"
+            android:name="ca.ualberta.cs.cmput301w15t12.LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,20 +23,45 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="ca.ualberta.cs.cmput301w15t12.Activities.ClaimListActivity"
+            android:name="ca.ualberta.cs.cmput301w15t12.ClaimListActivity"
             android:label="@string/title_activity_claim_list" >
         </activity>
         <activity
-            android:name="ca.ualberta.cs.cmput301w15t12.Activities.ClaimActivity"
-            android:label="@string/title_activity_claim" >
+            android:name="ca.ualberta.cs.cmput30ca.ualberta.cs.cmput301w15t12.ClaimActivitylabel="
+            string=""
+            title_activity_claim="" >
         </activity>
         <activity
-            android:name="ca.ualberta.cs.cmput301w15t12.Activities.ApproverActivity"
+            android:name="ca.ualberta.cs.cmput301w15t12.ApproverClaimActivity"
             android:label="@string/title_activity_approver" >
         </activity>
         <activity
-            android:name="ca.ualberta.cs.cmput301w15t12.Activities.ApproverItemActivity"
+            android:name="ca.ualberta.cs.cmput301w15t12.ApproverItemActivity"
             android:label="@string/title_activity_approver_item" >
+        </activity>
+        <activity android:name="ca.ualberta.cs.cmput301w15t12.Activities.Addca.ualberta.cs.cmput301w15t12.AddItemActivityctivity_add_item" >
+        </activity>
+        <activity android:name="ca.ualberta.cs.cmput301w15t12.Actca.ualberta.cs.cmput301w15t12.AddClaimActivitying/title_activity_add_claim" >
+        </activity>
+        <activity
+            android:name="ca.ualberta.cs.cmput301w15t12.AddCommentsActivity"
+            android:label="@string/title_activity_add_comments" >
+        </activity>
+        <activity
+            android:name="ca.ualberta.cs.cmput301w15t12.ApproverListActivity"
+            android:label="@string/title_activity_approver_list" >
+        </activity>
+        <activity
+            android:name="ca.ualberta.cs.cmput301w15t12.EmailActivity"
+            android:label="@string/title_activity_email" >
+        </activity>
+        <activity
+            android:name="ca.ualberta.cs.cmput301w15t12.NewAccountActivity"
+            android:label="@string/title_activity_new_account" >
+        </activity>
+        <activity
+            android:name="ca.ualberta.cs.cmput301w15t12.SeeCommentsActivity"
+            android:label="@string/title_activity_see_comments" >
         </activity>
     </application>
 
