--- a/CMPUT301W15T12/AndroidManifest.xml
+++ b/CMPUT301W15T12/AndroidManifest.xml
@@ -27,9 +27,8 @@
             android:label="@string/title_activity_claim_list" >
         </activity>
         <activity
-            android:name="ca.ualberta.cs.cmput30ca.ualberta.cs.cmput301w15t12.ClaimActivitylabel="
-            string=""
-            title_activity_claim="" >
+            android:name="ca.ualberta.cs.cmput30ca.ualberta.cs.cmput301w15t12.ClaimActivity"
+            android:label="@string/title_claim_page">
         </activity>
         <activity
             android:name="ca.ualberta.cs.cmput301w15t12.ApproverClaimActivity"
