--- a/CMPUT301W15T12/AndroidManifest.xml
+++ b/CMPUT301W15T12/AndroidManifest.xml
@@ -38,9 +38,11 @@
             android:name="ca.ualberta.cs.cmput301w15t12.ApproverItemActivity"
             android:label="@string/title_activity_approver_item" >
         </activity>
-        <activity android:name="ca.ualberta.cs.cmput301w15t12.Activities.Addca.ualberta.cs.cmput301w15t12.AddItemActivityctivity_add_item" >
+        <activity 
+            android:name="ca.ualberta.cs.cmput301w15t12.AddItemActivity" >
         </activity>
-        <activity android:name="ca.ualberta.cs.cmput301w15t12.Actca.ualberta.cs.cmput301w15t12.AddClaimActivitying/title_activity_add_claim" >
+        <activity 
+            android:name="ca.ualberta.cs.cmput301w15t12.AddClaimActivity" >
         </activity>
         <activity
             android:name="ca.ualberta.cs.cmput301w15t12.AddCommentsActivity"
