--- a/CMPUT301W15T12/AndroidManifest.xml
+++ b/CMPUT301W15T12/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
+    
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -14,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="ca.ualberta.cs.cmput301w15t12.LoginActivity"
+            android:name="ca.ualberta.cs.cmput301w15t12.Activities.LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -57,11 +59,11 @@
             android:label="@string/title_activity_email" >
         </activity>
         <activity
-            android:name="ca.ualberta.cs.cmput301w15t12.NewAccountActivity"
+            android:name="ca.ualberta.cs.cmput301w15t12.Activities.NewAccountActivity"
             android:label="@string/title_activity_new_account" >
         </activity>
         <activity
-            android:name="ca.ualberta.cs.cmput301w15t12.SeeCommentsActivity"
+            andca.ualberta.cs.cmput301w15t12.Activities.SeeCommentsActivityntsActivity"
             android:label="@string/title_activity_see_comments" >
         </activity>
     </application>
