--- a/CMPUT301W15T12/AndroidManifest.xml
+++ b/CMPUT301W15T12/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="ca.ualberta.cs.cmput301w15t12.Activities.LoginActivity"
+            android:name="ca.ualberta.cs.cmput301w15t12.LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -59,12 +59,11 @@
             android:label="@string/title_activity_email" >
         </activity>
         <activity
-            android:name="ca.ualberta.cs.cmput301w15t12.Activities.NewAccountActivity"
+            android:name="ca.ualberta.cs.cmput301w15t12.NewAccountActivity"
             android:label="@string/title_activity_new_account" >
         </activity>
         <activity
-            andca.ualberta.cs.cmput301w15t12.Activities.SeeCommentsActivityntsActivity"
-            android:label="@string/title_activity_see_comments" >
+            android:name="ca.ualberta.cs.cmput30ca.ualberta.cs.cmput301w15t12.SeeCommentsActivitylabel="@string/title_activity_see_comments" >
         </activity>
     </application>
 
