--- a/CMPUT301W15T12/AndroidManifest.xml
+++ b/CMPUT301W15T12/AndroidManifest.xml
@@ -44,6 +44,8 @@
         </activity>
         <activity android:name="ca.ualberta.cs.cmput301w15t12.AddClaimActivity" >
         </activity>
+        <activity android:name="ca.ualberta.cs.cmput301w15t12.ClaimActivity" >
+        </activity>
         <activity
             android:name="ca.ualberta.cs.cmput301w15t12.AddCommentsActivity"
             android:label="@string/title_activity_add_comments" >
