--- a/CMPUT301W15T12/AndroidManifest.xml
+++ b/CMPUT301W15T12/AndroidManifest.xml
@@ -90,6 +90,10 @@
             android:name="ca.ualberta.cs.cmput301w15t12.AddDestinationsActivity"
             android:label="@string/title_activity_add_destinations" >
         </activity>
+        <activity
+            android:name="ca.ualberta.cs.cmput301w15t12.TagManagerActivity"
+            android:label="@string/title_activity_tag_manager" >
+        </activity>
     </application>
 
 </manifest>
