--- a/CMPUT301W15T12/AndroidManifest.xml
+++ b/CMPUT301W15T12/AndroidManifest.xml
@@ -29,6 +29,10 @@
             android:label="@string/title_activity_claim_list" >
         </activity>
         <activity
+            android:name="ca.ualberta.cs.cmput301w15t12.ViewPhotoActivity"
+            android:label="@string/title_activity_view_photo" >
+        </activity>
+        <activity
             android:name="ca.ualberta.cs.cmput30ca.ualberta.cs.cmput301w15t12.ClaimActivity"
             android:label="@string/title_claim_page" >
         </activity>
