--- a/CMPUT301W15T12/AndroidManifest.xml
+++ b/CMPUT301W15T12/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -27,10 +28,6 @@
         <activity
             android:name="ca.ualberta.cs.cmput301w15t12.ClaimListActivity"
             android:label="@string/title_activity_claim_list" >
-        </activity>
-        <activity
-            android:name="ca.ualberta.cs.cmput301w15t12.ViewPhotoActivity"
-            android:label="@string/title_activity_view_photo" >
         </activity>
         <activity
             android:name="ca.ualberta.cs.cmput30ca.ualberta.cs.cmput301w15t12.ClaimActivity"
