--- a/CMPUT301W15T12/AndroidManifest.xml
+++ b/CMPUT301W15T12/AndroidManifest.xml
@@ -35,6 +35,9 @@
             android:label="@string/title_activity_claim_list" >
         </activity>
         <activity
+            android:name="ca.ualberta.cs.cmput301w15t12.ViewPhotoActivity">
+        </activity>
+        <activity
             android:name="ca.ualberta.cs.cmput30ca.ualberta.cs.cmput301w15t12.ClaimActivity"
             android:label="@string/title_claim_page" >
         </activity>
