--- a/CMPUT301W15T12/.classpath
+++ b/CMPUT301W15T12/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry exported="true" kind="lib" path="libs/osmdroid-android-3.0.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/slf4j-android-1.5.8.jar"/>
+	<classpathentry kind="lib" path="libs/osmdroid-android-4.2.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
