--- a/CMPUT301W15T12/.classpath
+++ b/CMPUT301W15T12/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/osmdroid-android-4.2.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="libs/commons-io-2.4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
